--- a/ui/ui.vcxproj.filters
+++ b/ui/ui.vcxproj.filters
@@ -1,96 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
+    <ClInclude Include="ui.h" />
+    <ClInclude Include="func.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ui.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="func.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="ui.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="barbox.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="button.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="checkbox.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="file.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="func.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="gadget.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="icon.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="inputbox.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="keypad.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="keypress.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="keytrap.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="listbox.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="menu.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="menubar.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="message.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="mouse.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="popup.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="radio.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="scroll.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="uidraw.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="userbox.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="window.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClCompile Include="window.c" />
+    <ClCompile Include="barbox.c" />
+    <ClCompile Include="button.c" />
+    <ClCompile Include="checkbox.c" />
+    <ClCompile Include="file.c" />
+    <ClCompile Include="func.c" />
+    <ClCompile Include="gadget.c" />
+    <ClCompile Include="icon.c" />
+    <ClCompile Include="inputbox.c" />
+    <ClCompile Include="keypad.c" />
+    <ClCompile Include="keypress.c" />
+    <ClCompile Include="keytrap.c" />
+    <ClCompile Include="listbox.c" />
+    <ClCompile Include="menu.c" />
+    <ClCompile Include="menubar.c" />
+    <ClCompile Include="message.c" />
+    <ClCompile Include="mouse.c" />
+    <ClCompile Include="popup.c" />
+    <ClCompile Include="radio.c" />
+    <ClCompile Include="scroll.c" />
+    <ClCompile Include="ui.c" />
+    <ClCompile Include="uidraw.c" />
+    <ClCompile Include="userbox.c" />
   </ItemGroup>
 </Project>
