--- a/ChocolateDescent.vcxproj
+++ b/ChocolateDescent.vcxproj
@@ -156,7 +156,6 @@
     <ClCompile Include="2d\font.cpp" />
     <ClCompile Include="2d\gpixel.cpp" />
     <ClCompile Include="2d\gr.cpp" />
-    <ClCompile Include="2d\gr_sdl.cpp" />
     <ClCompile Include="2d\ibitblt.cpp" />
     <ClCompile Include="2d\lbitblt.cpp" />
     <ClCompile Include="2d\line.cpp" />
@@ -259,14 +258,18 @@
     <ClCompile Include="misc\byteswap.cpp" />
     <ClCompile Include="misc\error.cpp" />
     <ClCompile Include="misc\parsarg.cpp" />
+    <ClCompile Include="platform\joy.cpp" />
+    <ClCompile Include="platform\key.cpp" />
     <ClCompile Include="platform\mono.cpp" />
+    <ClCompile Include="platform\mouse.cpp" />
     <ClCompile Include="platform\openal\i_sound.cpp" />
-    <ClCompile Include="platform\sdl\joy.cpp" />
-    <ClCompile Include="platform\sdl\key.cpp" />
-    <ClCompile Include="platform\sdl\mouse.cpp" />
+    <ClCompile Include="platform\sdl\gr_sdl.cpp" />
+    <ClCompile Include="platform\sdl\key_sdl.cpp" />
+    <ClCompile Include="platform\sdl\mouse_sdl.cpp" />
     <ClCompile Include="platform\timer.cpp" />
     <ClCompile Include="platform\win32\disk.cpp" />
     <ClCompile Include="platform\win32\findfile.cpp" />
+    <ClCompile Include="platform\win32\win32window.cpp" />
     <ClCompile Include="texmap\ntmap.cpp" />
     <ClCompile Include="texmap\scanline.cpp" />
     <ClCompile Include="texmap\tmapflat.cpp" />
