--- a/ChocolateDescent.vcxproj
+++ b/ChocolateDescent.vcxproj
@@ -100,7 +100,6 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -276,7 +275,9 @@
     <ClCompile Include="platform\timer.cpp" />
     <ClCompile Include="platform\win32\disk.cpp" />
     <ClCompile Include="platform\win32\findfile.cpp" />
+    <ClCompile Include="platform\win32\hid.cpp" />
     <ClCompile Include="platform\win32\win32audio.cpp" />
+    <ClCompile Include="platform\win32\win32joystick.cpp" />
     <ClCompile Include="platform\win32\win32window.cpp" />
     <ClCompile Include="texmap\ntmap.cpp" />
     <ClCompile Include="texmap\scanline.cpp" />
@@ -411,6 +412,8 @@
     <ClInclude Include="platform\mouse.h" />
     <ClInclude Include="platform\s_midi.h" />
     <ClInclude Include="platform\timer.h" />
+    <ClInclude Include="platform\win32\hid.h" />
+    <ClInclude Include="platform\win32\win32joystick.h" />
     <ClInclude Include="texmap\scanline.h" />
     <ClInclude Include="texmap\texmap.h" />
     <ClInclude Include="texmap\texmapl.h" />
